[package]

name = "xdg-basedir"
version = "0.1.3"
authors = ["Kiran Purushothaman <kiran.purush@gmail.com>"]
license = "MIT"
repository = "https://github.com/kiran-kp/xdg-basedir"
documentation = "http://kiran-kp.github.io/xdg-basedir/xdg/index.html"
keywords = ["xdg", "basedir"]
readme = "README.md"
description = "Library to help with the XDG basedir spec"

[lib]
name = "xdg_basedir"

[features]
unstable = []
