[package]
name = "xdg-basedir"
version = "1.0.0"
authors = ["Kiran Purushothaman <projects@kirankp.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kiran-kp/xdg-basedir"
documentation = "http://kiran-kp.github.io/xdg-basedir/xdg_basedir/index.html"
keywords = ["xdg", "basedir"]
readme = "README.md"
description = "Library to help with the XDG basedir spec"

[lib]
name = "xdg_basedir"
